# gamelab

./: .editorconfig  .env  .gitignore  .ignore  Dependencies.MD  Guidelines.MD  README.md  app.d.ts  eslint.config.mjs  index.html  jest.config.ts  lingui.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: lint.yml  publish.yml
.husky/: pre-commit  pre-push
config/jest/: cssTransform.js  setupTests.ts  svgMock.js
internals/generators/: index.js
internals/generators/component/: functional.js.hbs  index.js
internals/generators/shared/: index.scss.hbs  test.js.hbs
internals/generators/utils/: component-exists.js  generate-landmark-integration.js  integrate-component.js  module-exists.js
src/: i18n.ts  index.css  main.scss  main.tsx  routes.tsx  updater.ts
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_logs.rs  autotest.rs  eula.rs  gamescope.rs  main.rs  ssh.rs  validators.rs
src/components/: index.ts
src/components/app-library/: app-library.scss  app-library.test.tsx  app-library.tsx  filter-button.tsx  game-card.tsx  index.ts
src/components/bulk-actions-menu/: bulk-actions-menu.scss  bulk-actions-menu.test.tsx  bulk-actions-menu.tsx  index.ts  (+2 more)
src/constants/: controller-format-template.json  index.ts  input-config.ts  launch-config-template.json  launch-config.ts  physical-layouts.ts
src/context/: index.ts
src/hooks/: index.ts  use-autotest.ts  use-drive-info.test.ts  use-drive-info.ts  use-input-device.ts  use-playserve.spec.tsx  use-playserve.ts
src/mocks/: app.ts  default-state.ts  provider-account-state.ts
src/redux/: store.ts
src/screens/: index.ts
src/types/: account.ts  app-download.ts  app.ts  drive.ts  index.ts  input-config.ts  launch.ts  platform-auth.ts  provider-status.ts  redux-flash.d.ts  submission.ts  user.ts
src/utils/: app-info.tests.ts  app-info.ts  auth.test.ts  auth.ts  compatibility.tsx  controllers.test.ts  controllers.ts  cookies.test.ts  cookies.ts  direction-keys.ts  index.ts  local-storage.test.ts  local-storage.ts  object.ts  test-utils.tsx
(+151 files in other folders)
