[package]
name = "gamelab"
version = "0.39.0"
description = "GameLAB testing app for Playtron"
authors = ["Playtron"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-log = { version = "2.0.0", features = ["colored"] }
tokio = { version = "1.32.0", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.10.2"
parking_lot = "0.12.2"
tauri-plugin-updater = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-process = "2.0.0"
russh = "0.45.0"
async-trait = "0.1.82"
tokio-util = "0.7.12"
log = "0.4.22"
reqwest = "0.12.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
